# cf-sign

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
sign/: Cargo.toml  dummy.pem
sign/src/: lib.rs  tests.rs
src/: lib.rs  main.rs  options.rs  sign.rs  tests.rs  upload.rs
