[package]
name = "cf-sign"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.63"
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
config = { version = "0.13.2", default-features = false, features = ["toml"] }
directories = "4.0.1"
openssl = "0.10.41"
url = "2.2.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }

aws-config = "0.48.0"
aws-sdk-s3 = "0.18.0"
tokio = { version = "1.21.0", features = ["full"] }
mime_guess = "2.0.4"

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
panic = "unwind"
incremental = false
rpath = false
opt-level = 3
lto = "fat"
codegen-units = 1

